--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                                     <div class="col-md-6">
                                         <div class="detail-box">
                                             <h1>
+												Vivaan Jo Varghese
                                                 Github<br />
                                                 Pages
                                             </h1>
