vivaan index.html
hi

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                                     <div class="col-md-6">
                                         <div class="detail-box">
                                             <h1>
-												Vivaan Jo Varghese
+												
                                                 Github<br />
-                                                Pages
+                                                Pages by Vivaan Jo Varghese
                                             </h1>
                                             <p>
                                                 Hosting your first GitHub web
